--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,12 @@
     <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3,4,5,6,7]">
       <mat-card class="mat-elevation-z4">
         <mat-card-header>
-          <mat-card-title>Himalayan {{num}}</mat-card-title>
+          <mat-card-title>Spider Man {{num}}</mat-card-title>
         </mat-card-header>
-        <img src="./../assets/imagens/mountains.jpg" mat-card-image>
+        <img src="./../assets/imagens/spider-man-ps4-hombre-arana-con-mano-empunada-2964.jpg" mat-card-image>
 
         <mat-card-content>
-          <p>The Himalayas is a mountain range in Asia</p>
+          <p>Spider-Man is a fictional superhero created by writer-editor Stan Lee and writer-artist Steve Ditko. </p>
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>LIKE</button>
